# BigmoMasterclass_ML

./: README.md  main.py  pyproject.toml
notebook/: notebook.ipynb
src/: __init__.py  activations.py  initializers.py  losses.py  model.py
src/layers/: __init__.py  dense.py  layer.py  rmsnorm.py
src/utils/: __init__.py  persistence.py  visualization.py
